--- a/BanMayTinh/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BanMayTinh/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
 								<li><a asp-controller="Product">Products</a></li>
 								<li><a asp-controller="Category">Categories</a></li>
 								<li><a asp-controller="Brand">Brands</a></li>
+								<li><a asp-controller="Order" asp-controller="Index">Orders</a></li>
 							</ul>
 						</div>
 					</div>
