--- a/BanMayTinh/Areas/Admin/Views/Order/Index.cshtml
+++ b/BanMayTinh/Areas/Admin/Views/Order/Index.cshtml
@@ -38,7 +38,7 @@
 
 
                 <td>
-                    <a asp-action="ViewOrder" class="btn btn-warning btn-sm" asp-controller="Order" asp-route-Id="@item.OrderCode">View</a>
+                    <a asp-action="ViewOrder" class="btn btn-warning btn-sm" asp-controller="Order" asp-route-ordercode="@item.OrderCode">View</a>
                     <a asp-action="Delete" class="btn btn-danger btn-sm confirmDeletion" asp-controller="Order" asp-route-Id="@item.Id">Delete</a>
                 </td>
             </tr>
