--- a/BanMayTinh/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BanMayTinh/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
 								<li><a asp-action="index" asp-controller="Brand">Manage Brands</a></li>
 								<li><a asp-action="index" asp-controller="Order">Manage Orders</a></li>
 								<li><a asp-action="index" asp-controller="User">Manage User</a></li>
+								<li><a asp-action="index" asp-controller="Role">Manage Role</a></li>
 							</ul>
 						</div>
 					</div>
