--- a/BanMayTinh/Areas/Admin/Views/User/Index.cshtml
+++ b/BanMayTinh/Areas/Admin/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AppUserModel>
+﻿
 @{
     ViewData["title"] = "List User";
 }
@@ -17,20 +17,21 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var user in Model)
+        @foreach (var userWithRoles in Model)
         {
             <tr>
-                <th scope="row">@user.UserName</th>
-                <td>@user.Email</td>
-                <td>@user.PasswordHash</td>
-                <td>@user.PhoneNumber</td>
-                <td></td>
+                <td>@userWithRoles.User.Id</td>
+                <th scope="row">@userWithRoles.User.UserName</th>
+                <td>@userWithRoles.User.Email</td>
+                <td>@userWithRoles.User.PasswordHash</td>
+                <td>@userWithRoles.User.PhoneNumber</td>
+                <td> @userWithRoles.RoleName</td>
                 
 
 
                 <td>
-                    <a asp-action="Edit" class="btn btn-warning btn-sm" asp-controller="User" asp-route-Id="@user.Id">Edit</a>
-                    <a asp-action="Delete" class="btn btn-danger btn-sm confirmDeletion" asp-controller="User" asp-route-Id="@user.Id">Delete</a>
+                    <a asp-action="Edit" class="btn btn-warning btn-sm" asp-controller="User" asp-route-Id="@userWithRoles.User.Id">Edit</a>
+                    <a asp-action="Delete" class="btn btn-danger btn-sm confirmDeletion" asp-controller="User" asp-route-Id="@userWithRoles.User.Id">Delete</a>
                 </td>
             </tr>
         }
